fix a bug where quantity icon displayed on mobile when cart is empty

--- a/src/modules/features/HeaderCart/HeaderCart.module.scss
+++ b/src/modules/features/HeaderCart/HeaderCart.module.scss
@@ -39,6 +39,14 @@
 
     &_active {
         cursor: pointer;
+
+        @media all and (max-width: 960px) {
+            .header__icon {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+            }
+        }
     }
 
     &__icon {
@@ -46,6 +54,10 @@
         height: 32px;
         width: 32px;
         padding-top: 3px;
+
+        @media all and (max-width: 960px) {
+            display: none;
+        }
 
         &:hover {
             svg {
@@ -57,6 +69,10 @@
             height: 100%;
             width: 100%;
             fill: #fff;
+
+            @media all and (max-width: 960px) {
+                display: none;
+            }
         }
 
         span {
@@ -75,27 +91,23 @@
             border-radius: 2px;
             font-family: 'Orbitron';
             padding: 0 2px;
-        }
 
-        &_active {
-            svg {
-                fill: $blueLight;
-            }
-        }
-
-        @media all and (max-width: 960px) {
-            svg {
-                display: none;
-            }
-
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-
-            span {
+            @media all and (max-width: 960px) {
                 position: static;
                 height: 20px;
                 width: 20px;
+            }
+        }
+
+        &_active {
+            @media all and (max-width: 960px) {
+                display: flex;
+                align-items: center;
+                justify-content: flex-start;
+            }
+
+            svg {
+                fill: $blueLight;
             }
         }
     }
